# aicex_toolbox

aicex_sim_toolbox/scripts/: cleanup_dir.py  gm_analysis.py  inverter_gain_analysis.py  sweep_vdd.py
cornerstone/: README.md  pyproject.toml
cornerstone/src/cornerstone/: __init__.py  cli.py
cornerstone/src/cornerstone/core/: __init__.py  database.py  io.py  parser.py
cornerstone/src/cornerstone/scripts/: gm_analysis.py
info/skywater/spice_model_cards/: parse_spice_model_cards.py  parse_spice_model_cards.py~
info/skywater/spice_model_cards/output/: sky130_fd_pr__nfet_01v8_lvt_models.csv  sky130_fd_pr__nfet_01v8_models.csv  sky130_fd_pr__nfet_03v3_nvt_models.csv  sky130_fd_pr__pfet_01v8_lvt_models.csv  sky130_fd_pr__pfet_01v8_models.csv
