[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cornerstone"

version = "0.1.0"
description = "IC Simulation Post-Processing for PVT Corners & Monte Carlo"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
]

[project.scripts]
cornerstone = "cornerstone.cli:main"